name:                smbc-download
version:             0.1.0.0
synopsis:            Downloads SMBC comics
description:         Please see README.md
homepage:            https://github.com/mgoszcz2/smbc-download
license:             GPLV3
license-file:        LICENSE
author:              Maciej Goszczycki
maintainer:          mgoszcz2@gmail.com
copyright:           2016 Maciej Goszczycki
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable smbc-download
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, HandsomeSoup, hxt, transformers, filepath, directory
